--- a/AgapayAidSystem.csproj
+++ b/AgapayAidSystem.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Pages\Disaster\AddDisaster.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.21" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.21">
@@ -17,6 +21,18 @@
     <PackageReference Include="MySql.Data" Version="8.1.0" />
     <PackageReference Include="MySql.Web" Version="8.1.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\Disaster\AddDisaster.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Pages\Disaster\AddDisaster.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Pages\Disaster\AddDisaster.cshtml" />
   </ItemGroup>
 
 </Project>
