--- a/AgapayAidSystem.csproj
+++ b/AgapayAidSystem.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Pages\Users\**" />
+    <Content Remove="Pages\Users\**" />
+    <EmbeddedResource Remove="Pages\Users\**" />
+    <None Remove="Pages\Users\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.21" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.21">
@@ -17,10 +24,6 @@
     <PackageReference Include="MySql.Data" Version="8.1.0" />
     <PackageReference Include="MySql.Web" Version="8.1.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Pages\Users\" />
   </ItemGroup>
 
 </Project>
