configured connectionString in appsettings.json and program.cs

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "server=localhost;user=root;database=agapayaid;port=3306;password=12345;"
     }
-  },
-  "AllowedHosts": "*",
 }
