--- a/AgapayAidSystem.csproj
+++ b/AgapayAidSystem.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.10" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Pages\UserManagement\ECStaff\" />
+    <Folder Include="Pages\UserManagement\LGUStaff\" />
+  </ItemGroup>
 </Project>
