--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -7,7 +7,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5072"
+      "applicationUrl": "https://agapayaid-9d240e6c907d.herokuapp.com/"
     },
     "IIS Express": {
       "commandName": "IISExpress",
