--- a/AgapayAidSystem.csproj
+++ b/AgapayAidSystem.csproj
@@ -19,4 +19,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.10" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Pages\family\NewFolder\" />
+  </ItemGroup>
 </Project>
