maraming binago dahil kay jeanne

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "server=localhost;user=root;database=agapayaid;port=3306;password=12345;"
+        "DefaultConnection": "server=srv1237.hstgr.io;user=u550552682_admin;database=u550552682_agapayaid;port=3306;password=Agapayaid123project;"
     }
 }
