--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -7,7 +7,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://192.168.1.12:5072"
+      "applicationUrl": "http://localhost:5072"
     },
     "IIS Express": {
       "commandName": "IISExpress",
