--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "server=srv1237.hstgr.io;user=u550552682_admin;database=u550552682_agapayaid;port=3306;password=Agapayaid123project;"
+        //"DefaultConnection": "server=srv1237.hstgr.io;user=u550552682_admin;database=u550552682_agapayaid;port=3306;password=Agapayaid123project;",
+        "DefaultConnection": "server=localhost;user=root;database=agapayaid;port=3306;password=12345;"
     }
 }
