--- a/AgapayAidSystem.csproj
+++ b/AgapayAidSystem.csproj
@@ -12,6 +12,7 @@
     <None Remove="Pages\Users\**" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="30.0.1" />
     <PackageReference Include="MySql.Data" Version="8.1.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.25" />
